--- a/src/assets/css/sass/core/layout.scss
+++ b/src/assets/css/sass/core/layout.scss
@@ -1,5 +1,5 @@
 .logo {
-  width: 20%;
+  width: 80px;
 }
 .background--color {
   background-color: #e7e7fa;
@@ -16,6 +16,6 @@
 }
 .topnav {
   background-color: rgb(252, 252, 252);
-  overflow: hidden;
-  padding: 1rem;
+  // overflow: hidden;
+  padding: 15px;
 }
