--- a/src/assets/css/sass/core/layout.scss
+++ b/src/assets/css/sass/core/layout.scss
@@ -5,6 +5,10 @@
   background-color: #e7e7fa;
   min-height: 100vh;
 }
+
+.cursor--pointer {
+  cursor: pointer;
+}
 .top-title {
   font-size: 24px;
   text-align: left;
@@ -16,6 +20,5 @@
 }
 .topnav {
   background-color: rgb(252, 252, 252);
-  // overflow: hidden;
   padding: 15px;
 }
