--- a/src/assets/css/sass/core/layout.scss
+++ b/src/assets/css/sass/core/layout.scss
@@ -1,3 +1,5 @@
+@import "../variables.scss";
+
 .logo {
   width: 80px;
 }
@@ -24,8 +26,8 @@
 }
 
 .arrow {
-  border: solid black;
-  border-width: 0 3px 3px 0;
+  border: solid rgb(0, 0, 0);
+  border-width: 0 2px 2px 0;
   display: inline-block;
   padding: 3px;
 }
@@ -79,4 +81,8 @@
   left: 0;
   transform: rotate(45deg);
   transform-origin: 100% 100%;
+}
+
+.text--gold {
+  color: $primary-color;
 }
