seaprate sort functions, change fetch data to hook

--- a/src/assets/css/sass/core/componens.scss
+++ b/src/assets/css/sass/core/componens.scss
@@ -49,6 +49,9 @@
     0 6px 20px 0 rgba(192, 188, 188, 0.2);
 }
 
+.card--name__height {
+  min-height: 45px;
+}
 .img--card {
   transition: 0.3s;
   width: 100%;
