add a default no image

--- a/src/assets/css/sass/core/componens.scss
+++ b/src/assets/css/sass/core/componens.scss
@@ -118,3 +118,7 @@
   background-color: $visited-color;
   border-color: $border-color;
 }
+
+.image--default--background {
+  background-image: url("../../../images/NoImg.jpg");
+}
